--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <div id="main-content">
     <header>
         <h1>VETERANO</h1>
-		<p>Xavi Villaronga García</p>
+		
         <p>Compositor y Artista de Música Pop</p>
     </header>
     
@@ -397,7 +397,7 @@
                         <h3>Hace Poco</h3>
                         <p>Año: 2025 | Duración: 3:45</p>
                         <audio controls>
-                            <source src="audio/Hacepoco.mp3" type="audio/mp3">
+                            <source src="Hacepoco.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
