--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <h2>Mi Trayectoria</h2>
             <div class="bio">
                 <div class="bio-imagen">
-                    <img src="img/XAVIBLANCO.jpg" alt="Foto del artista">
+                    <img src="XAVIBLANCO.jpg" alt="Foto del artista">
                 </div>
                 <div class="bio-texto">
                     <p>Aquí puedes incluir tu biografía musical. Cuéntale a tu audiencia sobre tus inicios en la música, tus influencias, tu estilo y evolución como compositor de música pop.</p>
