--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
     <!-- Pantalla de Login -->
     <div id="login-container">
         <div id="login-form">
+		<h1>VETERANO</h1>
             <h2>Acceso Privado</h2>
             <div class="form-group">
                 <label for="username">Usuario</label>
@@ -355,7 +356,7 @@
     <div id="main-content">
     <header>
         <h1>VETERANO</h1>
-		
+	<p>Xavi Villaronga García</p>	
         <p>Compositor y Artista de Música Pop</p>
     </header>
     
