--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <!-- Pantalla de Login -->
     <div id="login-container">
         <div id="login-form">
-		<h1>VETERANO</h1>
+		<h1 style="color: #34495e;">VETERANO</h1>
             <h2>Acceso Privado</h2>
             <div class="form-group">
                 <label for="username">Usuario</label>
