--- a/index.html
+++ b/index.html
@@ -377,10 +377,17 @@
                     <img src="XAVIBLANCO.jpg" alt="Foto del artista">
                 </div>
                 <div class="bio-texto">
-                    <p>Aquí puedes incluir tu biografía musical. Cuéntale a tu audiencia sobre tus inicios en la música, tus influencias, tu estilo y evolución como compositor de música pop.</p>
-                    <p>Menciona tus logros importantes, colaboraciones con otros artistas, participación en eventos o cualquier información relevante que quieras compartir sobre tu trayectoria.</p>
-                    <p>Esta sección puede ser tan extensa como necesites. Recuerda que es importante conectar con tu audiencia compartiendo tu historia personal y artística.</p>
-                </div>
+                    <p>Hola,
+
+Me llamo Xavi Villaronga y soy un artista apasionado por la música con un enfoque fresco y pegadizo. He compuesto una maqueta con 16 canciones originales que combinan pop y música urbana  con letras auténticas y melodías memorables.
+]</p>
+                    <p>Estoy buscando oportunidades para llevar mi música al siguiente nivel y creo que podría encajar en vuestro catálogo. Adjunto algunas muestras para que podáis escucharlas. Estoy abierto a propuestas de colaboración, distribución o venta de los temas.
+</p>
+                    <p>Me encantaría recibir vuestra opinión y explorar cómo podríamos trabajar juntos. Si os interesa, podemos concertar una reunión o llamada.</p>
+                    <p>Gracias por vuestro tiempo. Espero vuestra respuesta.
+
+Un saludo,</p>
+		</div>
             </div>
         </section>
         
