--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ Un saludo,</p>
                 <!-- Canción 1 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="/api/placeholder/400/320" alt="Portada Canción 1">
+                        <img src="xxx.jpg" alt="Portada Canción 1">
                     </div>
                     <div class="cancion-info">
                         <h3>Hace Poco</h3>
