--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <h2>Mi Trayectoria</h2>
             <div class="bio">
                 <div class="bio-imagen">
-                    <img src="xxx.jpg" alt="Foto del artista">
+                    <img src="xavirrinsol.jpg" alt="Foto del artista">
                 </div>
                 <div class="bio-texto">
                     <p>Hola,
