--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             margin-top: 10px;
             display: none;
         }
-        
+        /*
         #main-content {
             display: none; /* Ocultar el contenido principal inicialmente */
         }
-        
+        */
         /* Estilos generales */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -338,7 +338,7 @@
     </style>
 </head>
 <body>
-    <!-- Pantalla de Login -->
+    <!-- Pantalla de Login 
     <div id="login-container">
         <div id="login-form">
 		<h1 style="color: #cb4335;">VETERANO</h1>
@@ -355,7 +355,7 @@
             <p id="error-mensaje">Usuario o contraseña incorrectos. Inténtalo de nuevo.</p>
         </div>
     </div>
-
+--->
     <!-- Contenido Principal (inicialmente oculto) -->
     <div id="main-content">
     <header>
@@ -573,6 +573,7 @@ Un saludo,</p>
     </div> <!-- Cierre de main-content -->
 
     <script>
+	    /*
         // JavaScript para controlar la autenticación
         document.addEventListener('DOMContentLoaded', function() {
             const loginContainer = document.getElementById('login-container');
@@ -669,6 +670,7 @@ Un saludo,</p>
                 });
             }
         });
+	*/
     </script>
 </body>
 </html>
