--- a/index.html
+++ b/index.html
@@ -575,10 +575,11 @@ Un saludo,</p>
 	    -->
 	<div class="whatsapp">
 	   
-            <a href="#" title="Instagram">Instagram</a>
+            <a href="#" title="WhatsApp">WhatsApp</a>
              <div class="bio-imagen">
-                    <img src="xxx.jpg" alt="logo_whatsapp">
-                </div>
+                    <img src="whatsapp.png" alt="logo_whatsapp">
+        	</div>
+		<p>6996684985</p>
         </div>
 
 
