--- a/index.html
+++ b/index.html
@@ -576,10 +576,11 @@ Un saludo,</p>
 	<div class="whatsapp">
 	   
             <a href="#" title="WhatsApp">WhatsApp</a>
-             <div class="bio-imagen">
+             <div>
                     <img src="whatsapp.png" alt="logo_whatsapp">
-        	</div>
-		<p>6996684985</p>
+		     <p>6996684985</p>
+       	     </div>
+		
         </div>
 
 
