--- a/index.html
+++ b/index.html
@@ -573,11 +573,11 @@ Un saludo,</p>
             <a href="#" title="SoundCloud">SoundCloud</a>
         </div>
 	    -->
-	<div class="whatsapp">
+	<div class="redes-sociales">
 	   
             <a href="#" title="WhatsApp">WhatsApp</a>
              <div>
-                    <img src="whatsapp.png" alt="logo_whatsapp">
+                    <img src="whatsapp2.png" alt="logo_whatsapp">
 		     <p>6996684985</p>
        	     </div>
 		
