--- a/index.html
+++ b/index.html
@@ -577,8 +577,8 @@ Un saludo,</p>
 	   
             <a href="#" title="WhatsApp">WhatsApp</a>
              <div>
-                    <img src="whatsapp2.png" alt="logo_whatsapp">
-		     <p>6996684985</p>
+                   <!-- <img src="whatsapp2.png" alt="logo_whatsapp">-->
+		     <p>WhatsApp:   6996684985</p>
        	     </div>
 		
         </div>
