--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Un saludo,</p>
                     </div>
                     <div class="cancion-info">
                         <h3>Hace Poco</h3>
-                        <p>Año: 2025 | Duración: 3:45</p>
+                        <p>Año: 2025 | Duración: 3:15</p>
                         <audio controls>
                             <source src="Hacepoco.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
@@ -424,10 +424,10 @@ Un saludo,</p>
                         <img src="/api/placeholder/400/320" alt="Portada Canción 2">
                     </div>
                     <div class="cancion-info">
-                        <h3>Nombre de Canción 2</h3>
+                        <h3>Partner in crime</h3>
                         <p>Año: 2023 | Duración: 4:12</p>
                         <audio controls>
-                            <source src="#" type="audio/mp3">
+                            <source src="2-Partner in crime.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion2">Ver Letra</button>
@@ -480,6 +480,70 @@ Un saludo,</p>
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion4">Ver Letra</button>
+                    </div>
+                </div>
+
+		    <!-- Canción 6 -->
+                <div class="cancion-card">
+                    <div class="cancion-imagen">
+                        <img src="" alt="Portada Canción 6">
+                    </div>
+                    <div class="cancion-info">
+                        <h3>Hace Poco</h3>
+                        <p>Año: 2025 | Duración: 3:45</p>
+                        <audio controls>
+                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            Tu navegador no soporta el elemento de audio.
+                        </audio>
+                        <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
+                    </div>
+                </div>
+
+		    <!-- Canción 7 -->
+                <div class="cancion-card">
+                    <div class="cancion-imagen">
+                        <img src="xxx.jpg" alt="Portada Canción 7">
+                    </div>
+                    <div class="cancion-info">
+                        <h3>Hace Poco</h3>
+                        <p>Año: 2025 | Duración: 3:45</p>
+                        <audio controls>
+                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            Tu navegador no soporta el elemento de audio.
+                        </audio>
+                        <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
+                    </div>
+                </div>
+
+		    <!-- Canción 8 -->
+                <div class="cancion-card">
+                    <div class="cancion-imagen">
+                        <img src="xxx.jpg" alt="Portada Canción 8">
+                    </div>
+                    <div class="cancion-info">
+                        <h3>Hace Poco</h3>
+                        <p>Año: 2025 | Duración: 3:45</p>
+                        <audio controls>
+                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            Tu navegador no soporta el elemento de audio.
+                        </audio>
+                        <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
+                    </div>
+                </div>
+
+		    <!-- Canción 9 -->
+                <div class="cancion-card">
+                    <div class="cancion-imagen">
+                        <img src="xxx.jpg" alt="Portada Canción 9">
+                    </div>
+                    <div class="cancion-info">
+                        <h3>Hace Poco</h3>
+                        <p>Año: 2025 | Duración: 3:45</p>
+                        <audio controls>
+                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            Tu navegador no soporta el elemento de audio.
+                        </audio>
+                        <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
                     </div>
                 </div>
                 
