--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ Un saludo,</p>
                 <!-- Canción 1 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="xxx.jpg" alt="Portada Canción 1">
+                        <img src="" alt="Portada Canción 1">
                     </div>
                     <div class="cancion-info">
                         <h3>Hace Poco</h3>
@@ -425,7 +425,7 @@ Un saludo,</p>
                     </div>
                     <div class="cancion-info">
                         <h3>Partner in crime</h3>
-                        <p>Año: 2023 | Duración: 4:12</p>
+                        <p>Año: 2023 | Duración: 3:03</p>
                         <audio controls>
                             <source src="2-Partner in crime.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
@@ -440,10 +440,10 @@ Un saludo,</p>
                         <img src="/api/placeholder/400/320" alt="Portada Canción 3">
                     </div>
                     <div class="cancion-info">
-                        <h3>Nombre de Canción 3</h3>
-                        <p>Año: 2022 | Duración: 3:58</p>
+                        <h3>Sweet Barcelona</h3>
+                        <p>Año: 2022 | Duración: 3:25</p>
                         <audio controls>
-                            <source src="#" type="audio/mp3">
+                            <source src="3-Sweet Barcelona.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion3">Ver Letra</button>
@@ -456,10 +456,10 @@ Un saludo,</p>
                         <img src="/api/placeholder/400/320" alt="Portada Canción 4">
                     </div>
                     <div class="cancion-info">
-                        <h3>Nombre de Canción 4</h3>
-                        <p>Año: 2022 | Duración: 3:58</p>
+                        <h3>No</h3>
+                        <p>Año: 2022 | Duración: 3:39</p>
                         <audio controls>
-                            <source src="#" type="audio/mp3">
+                            <source src="4-No.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion3">Ver Letra</button>
@@ -473,10 +473,10 @@ Un saludo,</p>
                         <img src="/api/placeholder/400/320" alt="Portada Canción 5">
                     </div>
                     <div class="cancion-info">
-                        <h3>Nombre de Canción 5</h3>
-                        <p>Año: 2022 | Duración: 3:30</p>
+                        <h3>La puerta secreta</h3>
+                        <p>Año: 2022 | Duración: 4:17</p>
                         <audio controls>
-                            <source src="#" type="audio/mp3">
+                            <source src="5-La puerta secreta.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion4">Ver Letra</button>
@@ -489,10 +489,10 @@ Un saludo,</p>
                         <img src="" alt="Portada Canción 6">
                     </div>
                     <div class="cancion-info">
-                        <h3>Hace Poco</h3>
-                        <p>Año: 2025 | Duración: 3:45</p>
+                        <h3>La chica del verano</h3>
+                        <p>Año: 2025 | Duración: 2:58</p>
                         <audio controls>
-                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            <source src="6-La chica del verano.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
@@ -505,10 +505,10 @@ Un saludo,</p>
                         <img src="xxx.jpg" alt="Portada Canción 7">
                     </div>
                     <div class="cancion-info">
-                        <h3>Hace Poco</h3>
-                        <p>Año: 2025 | Duración: 3:45</p>
+                        <h3>Que hubiera pasado</h3>
+                        <p>Año: 2025 | Duración: 2:54</p>
                         <audio controls>
-                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            <source src="7-Que hubiera pasado.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
@@ -518,13 +518,13 @@ Un saludo,</p>
 		    <!-- Canción 8 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="xxx.jpg" alt="Portada Canción 8">
+                        <img src="" alt="Portada Canción 8">
                     </div>
                     <div class="cancion-info">
-                        <h3>Hace Poco</h3>
-                        <p>Año: 2025 | Duración: 3:45</p>
+                        <h3>Si esto es un adiós</h3>
+                        <p>Año: 2025 | Duración: 3:29</p>
                         <audio controls>
-                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            <source src="8-Si esto es un adiós.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
@@ -534,13 +534,13 @@ Un saludo,</p>
 		    <!-- Canción 9 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="xxx.jpg" alt="Portada Canción 9">
+                        <img src="" alt="Portada Canción 9">
                     </div>
                     <div class="cancion-info">
-                        <h3>Hace Poco</h3>
-                        <p>Año: 2025 | Duración: 3:45</p>
+                        <h3>Tan solo una canción</h3>
+                        <p>Año: 2025 | Duración: 3:25</p>
                         <audio controls>
-                            <source src="Hacepoco.mp3" type="audio/mp3">
+                            <source src="9-Tan solo una canción.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                         <button class="btn ver-letra" data-cancion="cancion1">Ver Letra</button>
