--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
                     <p>Hola,
 
 Me llamo Xavi Villaronga y soy un artista apasionado por la música con un enfoque fresco y pegadizo. He compuesto una maqueta con 16 canciones originales que combinan pop y música urbana  con letras auténticas y melodías memorables.
-]</p>
+</p>
                     <p>Estoy buscando oportunidades para llevar mi música al siguiente nivel y creo que podría encajar en vuestro catálogo. Adjunto algunas muestras para que podáis escucharlas. Estoy abierto a propuestas de colaboración, distribución o venta de los temas.
 </p>
                     <p>Me encantaría recibir vuestra opinión y explorar cómo podríamos trabajar juntos. Si os interesa, podemos concertar una reunión o llamada.</p>
                     <p>Gracias por vuestro tiempo. Espero vuestra respuesta.
 
-Un saludo,</p>
+Un saludo.</p>
 		</div>
             </div>
         </section>
@@ -405,7 +405,7 @@ Un saludo,</p>
                 <!-- Canción 1 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="" alt="Portada Canción 1">
+                        <img src="yyy.png" alt="Portada Canción 1">
                     </div>
                     <div class="cancion-info">
                         <h3>Hace Poco</h3>
