--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         */
         /* Estilos generales */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
+	    font-family: Arial, sans-serif;
             line-height: 1.6;
             color: #333;
             background-color: #f8f9fa;
@@ -377,11 +378,11 @@
         <section id="biografia">
             <h2>Mi Trayectoria</h2>
             <div class="bio">
-		    <!--
+		   
                 <div class="bio-imagen">
-                    <img src="xxx.jpg" alt="Foto del artista">
+                    <img src="yyy.png" alt="Foto del artista">
                 </div>
-		    -->
+		  
                 <div class="bio-texto">
                     <p>Hola,
 
