--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ Un saludo.</p>
                 <!-- Canción 1 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="yyy.png" alt="Portada Canción 1">
+                        <img src="1.png" alt="Portada Canción 1">
                     </div>
                     <div class="cancion-info">
                         <h3>Hace Poco</h3>
@@ -422,11 +422,11 @@ Un saludo.</p>
                 <!-- Canción 2 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="/api/placeholder/400/320" alt="Portada Canción 2">
+                        <img src="2.png" alt="Portada Canción 2">
                     </div>
                     <div class="cancion-info">
                         <h3>Partner in crime</h3>
-                        <p>Año: 2023 | Duración: 3:03</p>
+                        <p>Año: 2025 | Duración: 3:03</p>
                         <audio controls>
                             <source src="2-Partner in crime.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
@@ -438,11 +438,11 @@ Un saludo.</p>
                 <!-- Canción 3 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="/api/placeholder/400/320" alt="Portada Canción 3">
+                        <img src="3.png" alt="Portada Canción 3">
                     </div>
                     <div class="cancion-info">
                         <h3>Sweet Barcelona</h3>
-                        <p>Año: 2022 | Duración: 3:25</p>
+                        <p>Año: 2025 | Duración: 3:25</p>
                         <audio controls>
                             <source src="3-Sweet Barcelona.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
@@ -454,11 +454,11 @@ Un saludo.</p>
 				<!-- Canción 4 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="/api/placeholder/400/320" alt="Portada Canción 4">
+                        <img src="4.png" alt="Portada Canción 4">
                     </div>
                     <div class="cancion-info">
                         <h3>No</h3>
-                        <p>Año: 2022 | Duración: 3:39</p>
+                        <p>Año: 2025 | Duración: 3:39</p>
                         <audio controls>
                             <source src="4-No.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
@@ -471,11 +471,11 @@ Un saludo.</p>
                 <!-- Canción 5 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="/api/placeholder/400/320" alt="Portada Canción 5">
+                        <img src="5.png" alt="Portada Canción 5">
                     </div>
                     <div class="cancion-info">
                         <h3>La puerta secreta</h3>
-                        <p>Año: 2022 | Duración: 4:17</p>
+                        <p>Año: 2025 | Duración: 4:17</p>
                         <audio controls>
                             <source src="5-La puerta secreta.mp3" type="audio/mp3">
                             Tu navegador no soporta el elemento de audio.
@@ -487,7 +487,7 @@ Un saludo.</p>
 		    <!-- Canción 6 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="" alt="Portada Canción 6">
+                        <img src="6.png" alt="Portada Canción 6">
                     </div>
                     <div class="cancion-info">
                         <h3>La chica del verano</h3>
@@ -503,7 +503,7 @@ Un saludo.</p>
 		    <!-- Canción 7 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="xxx.jpg" alt="Portada Canción 7">
+                        <img src="7.png" alt="Portada Canción 7">
                     </div>
                     <div class="cancion-info">
                         <h3>Que hubiera pasado</h3>
@@ -519,7 +519,7 @@ Un saludo.</p>
 		    <!-- Canción 8 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="" alt="Portada Canción 8">
+                        <img src="8.png" alt="Portada Canción 8">
                     </div>
                     <div class="cancion-info">
                         <h3>Si esto es un adiós</h3>
@@ -535,7 +535,7 @@ Un saludo.</p>
 		    <!-- Canción 9 -->
                 <div class="cancion-card">
                     <div class="cancion-imagen">
-                        <img src="" alt="Portada Canción 9">
+                        <img src="9.png" alt="Portada Canción 9">
                     </div>
                     <div class="cancion-info">
                         <h3>Tan solo una canción</h3>
