--- a/index.html
+++ b/index.html
@@ -640,17 +640,18 @@ Un saludo.</p>
 	    -->
 	<div class="redes-sociales">
 	   
-            <a href="#" title="WhatsApp">WhatsApp</a>
+            <a href="#" title="WhatsApp"></a>
+		<a href="https://wa.me/+34699684985">WhatsApp</a>
              <div>
                    <!-- <img src="whatsapp2.png" alt="logo_whatsapp">-->
-		     <p>WhatsApp:   6996684985</p>
+		     <p>Teléfono:   699684985</p>
        	     </div>
 		
         </div>
 
 
 	    
-        <p>Email: veteranproject@gmail.com</p>
+        <p>Email: xavi.villa@yahoo.es</p>
         <p>&copy; 2025 Veterano. Todos los derechos reservados.</p>
     </footer>
     </div> <!-- Cierre de main-content -->
