--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <!-- Contenido Principal (inicialmente oculto) -->
     <div id="main-content">
     <header>
-        <h1>VETERANO</h1>
+        <h1>PROYECTO VETERANO</h1>
 	<p>Xavi Villaronga García</p>	
         <p>Compositor y Artista de Música Pop</p>
     </header>
@@ -640,8 +640,10 @@ Un saludo.</p>
 	    -->
 	<div class="redes-sociales">
 	   
-            <a href="#" title="WhatsApp"></a>
+             <div>
 		<a href="https://wa.me/+34699684985">WhatsApp</a>
+		</div>
+		<br/>
              <div>
                    <!-- <img src="whatsapp2.png" alt="logo_whatsapp">-->
 		     <a href="tel:+34678567876">Teléfono: 699684985</a>
