--- a/index.html
+++ b/index.html
@@ -651,9 +651,11 @@ Un saludo.</p>
 		
         </div>
 
-
-	    
-        <p>Email: xavi.villa@yahoo.es</p>
+		<br/>
+	   <div>
+		<a href="mailto:xavi.villa@yahoo.es">Email: xavi.villa@yahoo.es</a>
+	   </div>  
+       
         <p>&copy; 2025 Veterano. Todos los derechos reservados.</p>
     </footer>
     </div> <!-- Cierre de main-content -->
