--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
             margin-top: 10px;
             display: none;
         }
-        /*
+
+	    /* Ocultar el contenido principal inicialmente */
+	    /*
         #main-content {
-            display: none; /* Ocultar el contenido principal inicialmente */
+            display: none; 
         }
-        */
+        	*/
         /* Estilos generales */
         body {
             /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
