--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
       max-width: 1200px;
       margin: 0 auto;
     }
+
+    	@media (min-width: 769px) {
+	  .nav-container {
+	    justify-content: center;
+	  }
+	}
     
     .nav-container ul {
       list-style-type: none;
