--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ header::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.3); /* Ajusta la opacidad a tu gusto */
+  background: rgba(0, 0, 0, 0); /* Ajusta la opacidad a tu gusto */
   z-index: 1;
 }
 
@@ -392,6 +392,7 @@ header .header-content {
     }
     
     /* Footer */
+	  /*
     footer {
       background-color: #333;
       color: white;
@@ -399,6 +400,15 @@ header .header-content {
       padding: 30px 20px;
       margin-top: 60px;
     }
+	  */
+     footer {
+	  background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+	  color: white;
+	  text-align: center;
+	  padding: 30px 20px;
+	  margin-top: 60px;
+	}
+
     
     .redes-sociales {
       margin: 20px 0;
