--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ Un saludo.</p>
       <div>
         <p>Email: xavi.villa@yahoo.es</p>
       </div>
-      <p>&copy; 2025 Veterano. Todos los derechos reservados.</p>
+      <p>&copy; 2025 Proyecto Veterano. Todos los derechos reservados.</p>
     </footer>
   </div> <!-- Cierre de main-content -->
   
