--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ Un saludo.</p>
     <div id="modal-cancion1" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 1</h2>
+        <h2>Hace poco</h2>
         <div class="letra-texto">
           (estrofa)
 Hace poco era un canalla, hace poco yo era un perla
