--- a/index.html
+++ b/index.html
@@ -800,7 +800,8 @@ Nadie me lo hace igual…
         <br/>
         <div>
           <!-- <img src="whatsapp2.png" alt="logo_whatsapp"> -->
-          <a href="tel:+34678567876">Teléfono: 699684985</a>
+          <a href="tel:+34699684985"><i class="fas fa-phone-alt"></i> 699684985</a>
+
         </div>
       </div>
      
