--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ Un saludo.</p>
       
       <section id="musica">
         <h2>Mi Música</h2>
-        <p>Descubre algunas de mis composiciones musicales. Puedes escuchar cada tema y leer sus letras.</p>
+        <p>Descubre algunas de mis composiciones musicales. Puedes escuchar cada tema y leer sus letras. Se recomienda el uso de auriculares o de un buen sistema de audio.</p>
         
         <div class="canciones-container">
           <!-- Canción 1 -->
