--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ header .header-content {
           <div class="bio-texto">
             <p>Hola,
             
-Me llamo Xavi Villaronga y soy un compositor/artista apasionado por la música con un enfoque fresco y pegadizo. He compuesto mas de 20 temas originales que combinan pop y  diversos estilos de música urbana, con letras auténticas y melodías memorables.
+Soy Xavi Villaronga, compositor, artista y arreglista. Un apasionado por la música con un enfoque fresco y pegadizo. He compuesto mas de 20 temas originales que combinan pop y diversos estilos de música urbana, con letras auténticas y melodías memorables.
 </p>
             <p>Estoy buscando oportunidades para llevar mi música al siguiente nivel y creo que podría encajar en vuestro catálogo. Adjunto algunas muestras para que podáis escucharlas. Estoy abierto a propuestas de colaboración, distribución o venta de los temas.
 </p>
@@ -731,26 +731,31 @@ Tú en el cole, siempre con esa onda chill,
 yo tu partner in crime, desde un recreo sin fin.
 Ahora en TikTok brillas con un look bien real,
 viendo cómo cambiaste, rompiendo el flow natural.
+		
 Las risas de antaño eran nuestros beats sin medida,
 ahora cada story tuya enciende mi vida.
 Entre juegos y anécdotas se armó nuestro team,
 pero si te confieso mi crush se piérde lo que es el dream.
+		
 Baby, ¿qué me está pasando al verte cada día?
 Cómo hemos cambiado, joder con la cría.
 Y cuando quedamos, pierdo los sentidos,
 si "amiga" no fuera pretexto pa' mis latidos.
+		
 Y ahora eres mi crush, lo sé,
 me gustas tanto que es pec
 En mi playlist siempre suenas tu
 la niña de los ojos azul.
 Mi amiga de siempre, eyy
-porque ahora eres puro fuego,
-porque ahora yo quiero jugar 
-contigo a otros juegos. 
+por qué ahora eres puro fuego?,
+por qué ahora yo quiero jugar 
+contigo a otros juegos?. 
+		
 La inocencia que compartimos, memes y tardes sin plan,
 ahora tus posts son hits que hacen brillar el spam.
 Un “quédate” en el recreo, sin más complicación,
 ahora te miro el culo, ey, mi puta conexión.
+		
 Pero te volviste top en cada trending y momento,
 y en mis DMs se esconde otro día de tormento.
 Entre risas y stories que hoy casi te quiero,
@@ -766,9 +771,9 @@ me gustas tanto que es pec
 En mi playlist siempre suenas tu
 la niña de los ojos azul.
 Mi amiga de siempre, eyy
-porque ahora eres puro fuego,
-porque ahora yo quiero jugar 
-contigo a otros juegos.
+por qué ahora eres puro fuego?,
+por qué ahora yo quiero jugar 
+contigo a otros juegos?. 
 
 Uh, uh, uh, uh, uh, uh...
 Uh, uh, uh, uh, uh, uh...
@@ -783,9 +788,9 @@ me gustas tanto que es pec
 En mi playlist siempre suenas tu
 la niña de los ojos azul.
 Mi amiga de siempre, eyy
-porque ahora eres puro fuego,
-porque ahora yo quiero jugar 
-contigo a otros juegos.
+por qué ahora eres puro fuego?,
+por qué ahora yo quiero jugar 
+contigo a otros juegos?. 
 
         </div>
       </div>
@@ -883,6 +888,7 @@ Ahora juega al inocente en la plaza,
 mientras ella borra fotos con ansias.
 El juez le pregunta: "¿y por qué no huiste?",
 como si su cuerpo fuera un campo de minas.
+		
 No es no, Métetelo en la cabeza,
 que tu postureo no es cadena, es pieza.
 Si el silencio quema, el grito empieza,
@@ -896,6 +902,7 @@ La ley lee su falda, no lee su historial,
 su "no" fue un muro, ellos lo llaman normal.
 Pero hay una grieta en su habitación,
 mil voces de tiza escribiendo "NO".
+		
 No es no, Métetelo en la cabeza,
 que tu postureo no es cadena, es pieza.
 Si el silencio quema, el grito empieza,
@@ -908,7 +915,7 @@ y la cría ya no llora, organiza la revuelta.
 Y ahora las ventanas gritan su canción,
 cada "NO" es un latido en el corazón.
 Si el miedo fue cómplice, hoy es traición,
-que retumbe.
+que retumbe...
 Y ahora las ventanas gritan su canción,
 cada "NO" es un latido en el corazón.
 Si el miedo fue cómplice, hoy es traición,
