--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ header .header-content {
         <span class="menu-toggle"><i class="fas fa-bars"></i></span>
         <ul>
           <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#biografia">Biografía</a></li>
+          <li><a href="#biografia">El Proyecto</a></li>
           <li><a href="#musica">Mi Música</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
@@ -500,7 +500,7 @@ header .header-content {
     
     <div class="container" id="inicio">
       <section id="biografia">
-        <h2>Mi Trayectoria</h2>
+        <h2>El Proyecto</h2>
         <div class="bio">
           <div class="bio-imagen">
             <img src="duoxavi.png" alt="Foto del artista">
@@ -725,7 +725,7 @@ Nadie me lo hace igual…
     <div id="modal-cancion2" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 2</h2>
+        <h2>partner in crime</h2>
         <div class="letra-texto">
 Tú en el cole, siempre con esa onda chill,
 yo tu partner in crime, desde un recreo sin fin.
@@ -799,7 +799,7 @@ contigo a otros juegos?.
     <div id="modal-cancion3" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 3</h2>
+        <h2>Sweet Barcelona</h2>
         <div class="letra-texto">
 Me encontré allí tirado, 
 borracho en un Cadillac, 
@@ -860,7 +860,7 @@ Barcelona es un latido que no deja de sonar.
     <div id="modal-cancion4" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 4</h2>
+        <h2>No</h2>
         <div class="letra-texto">
 Era un "te quiero" en modo fake love,
 su manada de lobos, ella solo un click.
@@ -946,7 +946,7 @@ que retumbe….
 	   <div id="modal-cancion6" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 6</h2>
+        <h2>La chica del verano</h2>
         <div class="letra-texto">
 Fué la chica del verano, mi mejor verano!
 A la que guiñaba el ojo y me cogió la mano
@@ -1022,7 +1022,7 @@ La que no puedo olvidar aunque pasen los años…
 	   <div id="modal-cancion7" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 7</h2>
+        <h2>Qué hubiera pasado</h2>
         <div class="letra-texto">
 Tú, en la pista con ese vestido de sombra,
 el hielo en tu copa derritiéndose en la alfombra.
@@ -1097,7 +1097,7 @@ quizá hoy no sería solo un loop en tu playlist...
 	   <div id="modal-cancion8" class="modal">
       <div class="modal-content">
         <span class="close-modal">&times;</span>
-        <h2>Nombre de Canción 8</h2>
+        <h2>Si esto es un adiós</h2>
         <div class="letra-texto">
 Pues todo lo que he amado,
 con tristeza lo he olvidado.
