--- a/index.html
+++ b/index.html
@@ -931,7 +931,68 @@ que retumbe….
         <span class="close-modal">&times;</span>
         <h2>La puerta secreta</h2>
         <div class="letra-texto">
-          (letra)
+Mirando en tu Insta, con mirada de fuego. 
+Tus DM’s eran llama tu cuerpo era deseo 
+Tu tatoo en 4K. Mi pulso acelerado. 
+Tus besos fueron trampa y yo caí encantado. 
+
+Nos perdimos juntos entre luces de neón 
+una noche sin nombre, noche sin explicación 
+Todo era por instinto, tu piel contra mi piel, 
+ese darkmode era un mito hasta que no lo fue.
+
+Literal, que estará pensando 
+sí en mi pecho el eco de su voz está temblando.
+Si el deseo es un grito, pero el miedo lo calla,  
+y en la sombra esconde la verdad que mami me estalla.
+
+Dime lo que harás cuando yo lo sepa, 
+cuando yo descubra la puerta secreta
+ dime si real o es tan solo un juego 
+tú en el Only Fans, yo quemándome en el fuego 
+Dime lo que harás cuando yo lo sepa, 
+cuando yo descubra la puerta secreta
+dime si real o es tan solo un juego 
+porque siento amor como sólo haría un ciego. 
+
+Eh, tú en mi cama como lienzo desnudo,
+ mi cuerpo en el tuyo, sin temor ni escudo.
+Dijimos al principio, esta es solo diversión, 
+pero el cuore apuntaba en otra dirección. 
+Las madrugadas ya no saben igual. 
+El deseo nos hizo un pacto desleal, 
+pero hay un muro que nunca ha cruzado, 
+ese espacio de tu feed donde nunca he posteado. 
+Literal, que estará pensando 
+sí en mi pecho el eco de su voz está temblando. 
+Si el deseo es un grito, pero el miedo lo calla 
+y en las sombras esconde la verdad que mami me estalla.
+
+Dime lo que harás cuando yo lo sepa, cuando yo descubra la puerta secreta
+ dime si real o es tan solo un juego 
+tú en el Only Fans yo quemándome en el fuego 
+Dime lo que harás cuando yo lo sepa, cuando yo descubra la puerta secreta
+dime si real o es tan solo un juego 
+porque siento amor como sólo haría un ciego. 
+
+y cada vez que te vas 
+veo sombras en el portal, 
+miles de ojos que te ven 
+pero yo no puedo ni entender …
+
+Dime lo que harás cuando yo lo sepa, cuando yo descubra la puerta secreta
+ dime si real o es tan solo un juego 
+tú en el Only Fans yo quemándome en el fuego 
+Dime lo que harás cuando yo lo sepa, cuando yo descubra la puerta secreta
+dime si real o es tan solo un juego 
+porque siento amor como sólo haría un ciego. 
+
+Dime lo que harás cuando yo lo sepa, cuando yo descubra la puerta secreta
+ dime si real o es tan solo un juego 
+tú en el Only Fans yo quemándome en el fuego 
+Dime lo que harás cuando yo lo sepa, cuando yo descubra la puerta secreta
+dime si real o es tan solo un juego 
+porque siento amor como haría un ciego. 
         </div>
       </div>
     </div>
@@ -1142,7 +1203,71 @@ y que mañana voy a estarlo mucho más...
         <span class="close-modal">&times;</span>
         <h2>Tan solo uan canción</h2>
         <div class="letra-texto">
-          (letra)
+Nunca me gustó llorar, 
+pero mami, 
+cuando estoy a solas, 
+me ahogo en el alquitrán 
+Cómo te podía parar 
+cuando el viento es quien te trajo 
+y el tiempo 
+te hizo marchar 
+ya ves, no hay palabras. 
+No sé cómo tú ritmar
+ tan solo veo en la botella 
+mis lágrimas de eternidad 
+y sé que no estaré solo, 
+aunque tengo vocación, 
+me quedan tus recuerdos 
+para hacerte esta canción 
+que están solo una canción 
+solo 
+Nunca te gustó llorar, 
+pero si una lágrima 
+cae ahora 
+sonríe al verla a pasar 
+tantos besos diste ya 
+que no recuerdas 
+cuáles son los buenos 
+y cuáles con fecha de caridad 
+ya ves. 
+Esa lágrima 
+que parece tan vulgar, 
+si mi cara está dentro, 
+ponle alevosía y nocturnidad. 
+Sabes que no estarás sola 
+que estás en mi pantalón. 
+Saca alguno de mis besos 
+cuando leas esta canción 
+que están solo una canción.
+
+Que está solo una canción 
+Solo….solo…solo.
+
+Nunca me gustó llorar, 
+pero diablos, 
+cuando estoy a solas, me ahogo en el alquitrán 
+como te podía parar 
+cuando el viento es quien te trajo 
+y el tiempo te hizo marchar. 
+Y ya ves, no hay palabras. 
+No sé cómo tú rimar. 
+Tan solo veo en la botella 
+mis lágrimas de eternidad
+ y sé que no estaré solo, 
+aunque tengo vocación 
+Me quedan tus recuerdos 
+para hacerte esta canción 
+que están solo una canción 
+solo 
+
+Nunca te gustó llorar. 
+Pero si una lágrima 
+cae ahora 
+sonríe al verla pasar. 
+Tantos besos diste ya 
+que no recuerdas cuáles son los buenos 
+y cuáles con fecha de caducidad…
+
         </div>
       </div>
     </div>
